// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-pragma.html - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- @prettier -->

<div
            >  666             </div>

=====================================output=====================================
<!-- @prettier -->

<div>666</div>

================================================================================
`;

exports[`without-pragma.html - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
requirePragma: true
                                                      printWidth: 80 (default) |
=====================================input======================================
<div
            >  666             </div>

=====================================output=====================================
<div
            >  666             </div>

================================================================================
`;
